# Proyecto2_SO

./: .gitignore  Cargo.toml  KickoffQRFS.md  TODO.md  pruebas.md  qrfs  qrfs.md
qrfs-cli/: Cargo.toml
qrfs-core/: Cargo.toml
qrfs_cli/: Cargo.toml
qrfs_cli/tests/: mkfs_smoke.rs
qrfs_core/: Cargo.toml
qrfs_core/src/: disk.rs  errors.rs  fs.rs  fs_format.rs  lib.rs  qr.rs  storage.rs
