[package]
name = "qrfs_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
qrfs_core = { path = "../qrfs_core" }
fuse3 = { version = "0.8", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
bincode = "1"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.7.1" # Para evitar problemas de permisos entre móvil y PC
actix-files = "0.6"
base64 = "0.22"